--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,6 +21,6 @@ jobs:
       with:
         java-version: 1.8
     - name: Grant execute permission for gradle
-      run: chmod +x gradlew
+      run: chmod +x gradle
     - name: Build with Gradle
       run: ./gradlew build
