--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,7 +20,7 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: Grant execute permission for gradle
-      run: chmod +x gradle
+    - name: Para ejecutar el inicio de gradle
+      run: gradle init
     - name: Build with Gradle
-      run: ./gradlew build
+      run: gradle build
