--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,13 +14,13 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    steps:
+     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - name: Para ejecutar el inicio de gradle
-      run: gradle init
+    - name: Grant execute permission for gradle
+      run: chmod +x gradlew
     - name: Build with Gradle
-      run: gradle build
+      run: ./gradlew build
