--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,5 +12,7 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      - name: Init with Gradle
+        run: gradle init
       - name: Build with Gradle
-        run: ./gradlew build
+        run: gradle build
