--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,3 +16,5 @@ jobs:
         run: gradle init
       - name: Build with Gradle
         run: gradle build
+      - name: Run with Gradle
+        run: gradle bootRun
