--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,13 @@ plugins {
     id 'org.springframework.boot' version '2.1.9.RELEASE'
 }
 
+test {
+    include 'src/Test/**'
+
+    useJUnitPlatform()
+
+}
+
 repositories {
     mavenLocal()
     maven {
