--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,3 +14,5 @@ jobs:
           java-version: 1.8
       - name: Build with Gradle
         run: gradle build
+      - name: Test with Gradle
+        run: gradle test
