--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,7 +14,7 @@ jobs:
           java-version: 1.8
       - name: Build with Gradle
         run: gradle build
-      - name: Add remote origin 
+      #- name: Add remote origin 
         #run: git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
-      - name: Deploy to heroku
+      #- name: Deploy to heroku
         #run: git push heroku HEAD:master -f
