--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,8 +12,12 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      - name: wrapper with Gradle
+        run: gradle wrapper
+      - name: chmod with Gradle
+        run: chmod -x gradlew
       - name: Build with Gradle
-        run: gradle build
+        run: ./gradlew build
       #- name: Add remote origin 
         #run: git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
       #- name: Deploy to heroku
