--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,10 +14,12 @@ jobs:
           java-version: 1.8
       - name: wrapper with Gradle
         run: gradle wrapper
-      - name: chmod with Gradle
+      - name: chmod with Gradlew
         run: chmod +x gradlew
       - name: Build with Gradle
         run: ./gradlew build
+      - name: test with Gradle
+        run: ./gradlew test
       #- name: Add remote origin 
         #run: git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
       #- name: Deploy to heroku
