--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
       - name: test with Gradle
-        run: ./gradlew test
+        run: ./gradlew test -i
       #- name: Add remote origin 
         #run: git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
       #- name: Deploy to heroku
