--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,10 @@ sourceSets {
 
 test {
     useJUnitPlatform()
+    
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
 
 }
 
