--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -7,20 +7,59 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+       - uses: actions/checkout@v2
+       - name: Set up JDK 1.11
+         uses: actions/setup-java@v1
+         with:
+          java-version: 1.11
+       - name: Grant execute permission for gradlew
+         run: chmod +x gradlew
+       - name: Build with Gradle
+         run: ./gradlew jar
+          
+  test:
+    
+    runs-on: ubuntu-latest
+    steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
+      - name: Set up JDK 1.11
         uses: actions/setup-java@v1
         with:
-          java-version: 1.8
-      - name: wrapper with Gradle
-        run: gradle wrapper
-      - name: chmod with Gradlew
+          java-version: 1.11
+      - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Build with Gradle
-        run: ./gradlew build
-      - name: test with Gradle
-        run: ./gradlew test -i
-      #- name: Add remote origin 
+      - name: Build Main classes
+        run: ./gradlew jar
+      - name: Build Test classes
+        run: ./gradlew testClasses
+      - name: Run Tests
+        run: ./gradlew test
+   
+  validate:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up JDK 1.11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.11
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+    - name: Grant execute permission for mvnw
+      run: chmod +x mvnw
+    - name: Build Main classes
+      run: ./gradlew jar
+    - name: Validate
+      run: ./mvnw validate
+   
+  Deploy:
+    
+    runs-on: ubuntu-latest
+     
+     #- name: Add remote origin 
         #run: git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git
-      #- name: Deploy to heroku
-        #run: git push heroku HEAD:master -f
+     #- name: Deploy to heroku
+        #run: git push heroku HEAD:master -f     
+          
