--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -12,6 +12,8 @@ jobs:
          uses: actions/setup-java@v1
          with:
           java-version: 1.11
+       - name: wrapper with Gradle
+         run: gradle wrapper
        - name: Grant execute permission for gradlew
          run: chmod +x gradlew
        - name: Build with Gradle
